@@ -62,43 +62,41 @@ public class RosarioDataProvider {
         return Arrays.asList(
                 new Misterio("1. La Anunciación", R.drawable.gozosos1, new Oracion(context.getString(R.string.gozoso_1_meditacion), R.raw.gozoso_1_meditacion, false, "MEDITACION")),
                 new Misterio("2. La Visitación", R.drawable.gozosos2, new Oracion(context.getString(R.string.gozoso_2_meditacion), R.raw.gozoso_2_meditacion, false, "MEDITACION"))
-                //            new Misterio("3. El Nacimiento de Jesús", R.drawable.gozosos3, new Oracion(context.getString(R.string.gozoso_3_meditacion), R.raw.gozoso_3_meditacion, false, "MEDITACION")),
-                //            new Misterio("4. La Presentación de Jesús en el Templo", R.drawable.gozosos4, new Oracion(context.getString(R.string.gozoso_4_meditacion), R.raw.gozoso_4_meditacion, false, "MEDITACION")),
-                //            new Misterio("5. El Niño Jesús en el Templo", R.drawable.gozosos5, new Oracion(context.getString(R.string.gozoso_5_meditacion), R.raw.gozoso_5_meditacion, false, "MEDITACION"))
+ //               new Misterio("3. El Nacimiento de Jesús", R.drawable.gozosos3, new Oracion(context.getString(R.string.gozoso_3_meditacion), R.raw.gozoso_3_meditacion, false, "MEDITACION")),
+ //               new Misterio("4. La Presentación de Jesús en el Templo", R.drawable.gozosos4, new Oracion(context.getString(R.string.gozoso_4_meditacion), R.raw.gozoso_4_meditacion, false, "MEDITACION")),
+ //               new Misterio("5. El Niño Jesús en el Templo", R.drawable.gozosos5, new Oracion(context.getString(R.string.gozoso_5_meditacion), R.raw.gozoso_5_meditacion, false, "MEDITACION"))
         );
     }
 
-    /*
+
     private List<Misterio> getDolorososInternal() {
         return Arrays.asList(
-                new Misterio("1. La Oración en el Huerto", R.drawable.dolorosos1, new Oracion(context.getString(R.string.doloroso_1_meditacion), R.raw.doloroso_1_meditacion, false, "MEDITACION")),
-                new Misterio("2. La Flagelación", R.drawable.dolorosos2, new Oracion(context.getString(R.string.doloroso_2_meditacion), R.raw.doloroso_2_meditacion, false, "MEDITACION")),
-                new Misterio("3. La Coronación de Espinas", R.drawable.dolorosos3, new Oracion(context.getString(R.string.doloroso_3_meditacion), R.raw.doloroso_3_meditacion, false, "MEDITACION")),
-                new Misterio("4. El Camino al Calvario", R.drawable.dolorosos4, new Oracion(context.getString(R.string.doloroso_4_meditacion), R.raw.doloroso_4_meditacion, false, "MEDITACION")),
-                new Misterio("5. La Crucifixión y Muerte de Jesús", R.drawable.dolorosos5, new Oracion(context.getString(R.string.doloroso_5_meditacion), R.raw.doloroso_5_meditacion, false, "MEDITACION"))
+ //               new Misterio("1. La Oración en el Huerto", R.drawable.dolorosos1, new Oracion(context.getString(R.string.doloroso_1_meditacion), R.raw.doloroso_1_meditacion, false, "MEDITACION")),
+ //               new Misterio("2. La Flagelación", R.drawable.dolorosos2, new Oracion(context.getString(R.string.doloroso_2_meditacion), R.raw.doloroso_2_meditacion, false, "MEDITACION")),
+ //               new Misterio("3. La Coronación de Espinas", R.drawable.dolorosos3, new Oracion(context.getString(R.string.doloroso_3_meditacion), R.raw.doloroso_3_meditacion, false, "MEDITACION")),
+ //               new Misterio("4. El Camino al Calvario", R.drawable.dolorosos4, new Oracion(context.getString(R.string.doloroso_4_meditacion), R.raw.doloroso_4_meditacion, false, "MEDITACION")),
+ //               new Misterio("5. La Crucifixión y Muerte de Jesús", R.drawable.dolorosos5, new Oracion(context.getString(R.string.doloroso_5_meditacion), R.raw.doloroso_5_meditacion, false, "MEDITACION"))
         );
     }
 
     private List<Misterio> getGloriososInternal() {
-        return Arrays.asList(
-                new Misterio("1. La Resurrección", R.drawable.gloriosos1, new Oracion(context.getString(R.string.glorioso_1_meditacion), R.raw.glorioso_1_meditacion, false, "MEDITACION")),
-                new Misterio("2. La Ascensión", R.drawable.gloriosos2, new Oracion(context.getString(R.string.glorioso_2_meditacion), R.raw.glorioso_2_meditacion, false, "MEDITACION")),
-                new Misterio("3. La Venida del Espíritu Santo", R.drawable.gloriosos3, new Oracion(context.getString(R.string.glorioso_3_meditacion), R.raw.glorioso_3_meditacion, false, "MEDITACION")),
-                new Misterio("4. La Asunción de María", R.drawable.gloriosos4, new Oracion(context.getString(R.string.glorioso_4_meditacion), R.raw.glorioso_4_meditacion, false, "MEDITACION")),
-                new Misterio("5. La Coronación de María", R.drawable.gloriosos5, new Oracion(context.getString(R.string.glorioso_5_meditacion), R.raw.glorioso_5_meditacion, false, "MEDITACION"))
-        );
+        //             new Misterio("1. La Resurrección", R.drawable.gloriosos1, new Oracion(context.getString(R.string.glorioso_1_meditacion), R.raw.glorioso_1_meditacion, false, "MEDITACION")),
+        //             new Misterio("2. La Ascensión", R.drawable.gloriosos2, new Oracion(context.getString(R.string.glorioso_2_meditacion), R.raw.glorioso_2_meditacion, false, "MEDITACION")),
+        //             new Misterio("3. La Venida del Espíritu Santo", R.drawable.gloriosos3, new Oracion(context.getString(R.string.glorioso_3_meditacion), R.raw.glorioso_3_meditacion, false, "MEDITACION")),
+        //             new Misterio("4. La Asunción de María", R.drawable.gloriosos4, new Oracion(context.getString(R.string.glorioso_4_meditacion), R.raw.glorioso_4_meditacion, false, "MEDITACION")),
+        //             new Misterio("5. La Coronación de María", R.drawable.gloriosos5, new Oracion(context.getString(R.string.glorioso_5_meditacion), R.raw.glorioso_5_meditacion, false, "MEDITACION"))
+        return List.of();
     }
 
     private List<Misterio> getLuminososInternal() {
-        return Arrays.asList(
-                new Misterio("1. El Bautismo en el Jordán", R.drawable.luminosos1, new Oracion(context.getString(R.string.luminoso_1_meditacion), R.raw.luminoso_1_meditacion, false, "MEDITACION")),
-                new Misterio("2. Las Bodas de Caná", R.drawable.luminosos2, new Oracion(context.getString(R.string.luminoso_2_meditacion), R.raw.luminoso_2_meditacion, false, "MEDITACION")),
-                new Misterio("3. La Proclamación del Reino", R.drawable.luminosos3, new Oracion(context.getString(R.string.luminoso_3_meditacion), R.raw.luminoso_3_meditacion, false, "MEDITACION")),
-                new Misterio("4. La Transfiguración", R.drawable.luminosos4, new Oracion(context.getString(R.string.luminoso_4_meditacion), R.raw.luminoso_4_meditacion, false, "MEDITACION")),
-                new Misterio("5. La Institución de la Eucaristía", R.drawable.luminosos5, new Oracion(context.getString(R.string.luminoso_5_meditacion), R.raw.luminoso_5_meditacion, false, "MEDITACION"))
-        );
+        //             new Misterio("1. El Bautismo en el Jordán", R.drawable.luminosos1, new Oracion(context.getString(R.string.luminoso_1_meditacion), R.raw.luminoso_1_meditacion, false, "MEDITACION")),
+        //             new Misterio("2. Las Bodas de Caná", R.drawable.luminosos2, new Oracion(context.getString(R.string.luminoso_2_meditacion), R.raw.luminoso_2_meditacion, false, "MEDITACION")),
+        //             new Misterio("3. La Proclamación del Reino", R.drawable.luminosos3, new Oracion(context.getString(R.string.luminoso_3_meditacion), R.raw.luminoso_3_meditacion, false, "MEDITACION")),
+        //             new Misterio("4. La Transfiguración", R.drawable.luminosos4, new Oracion(context.getString(R.string.luminoso_4_meditacion), R.raw.luminoso_4_meditacion, false, "MEDITACION")),
+        //             new Misterio("5. La Institución de la Eucaristía", R.drawable.luminosos5, new Oracion(context.getString(R.string.luminoso_5_meditacion), R.raw.luminoso_5_meditacion, false, "MEDITACION"))
+        return List.of();
     }
-       */
+
 
     // Métodos públicos que usan los métodos internos
     public List<Misterio> getMisteriosDelDia() {
@@ -107,12 +105,12 @@ public class RosarioDataProvider {
 
         if (diaActual == DayOfWeek.MONDAY || diaActual == DayOfWeek.SATURDAY) {
             misteriosDelDia.addAll(getGozososInternal());
-//        } else if (diaActual == DayOfWeek.TUESDAY || diaActual == DayOfWeek.FRIDAY) {
-//            misteriosDelDia.addAll(getDolorososInternal());
-//        } else if (diaActual == DayOfWeek.WEDNESDAY || diaActual == DayOfWeek.SUNDAY) {
-//            misteriosDelDia.addAll(getGloriososInternal());
-//        } else if (diaActual == DayOfWeek.THURSDAY) {
-//            misteriosDelDia.addAll(getLuminososInternal());
+        } else if (diaActual == DayOfWeek.TUESDAY || diaActual == DayOfWeek.FRIDAY) {
+            misteriosDelDia.addAll(getDolorososInternal());
+        } else if (diaActual == DayOfWeek.WEDNESDAY || diaActual == DayOfWeek.SUNDAY) {
+            misteriosDelDia.addAll(getGloriososInternal());
+        } else if (diaActual == DayOfWeek.THURSDAY) {
+            misteriosDelDia.addAll(getLuminososInternal());
         } else {
             // Manejo de error o un conjunto de misterios por defecto
         }
